[gd_scene load_steps=4 format=3 uid="uid://bpwt6601esmp2"]

[ext_resource type="Script" path="res://scripts/host_script.gd" id="1_1yc4k"]
[ext_resource type="Texture2D" uid="uid://dwhs4ux835ftn" path="res://images/datalost.png" id="2_607de"]
[ext_resource type="Texture2D" uid="uid://bqouo5se1qgdc" path="res://images/datafound.png" id="2_uxx1x"]

[node name="Host_scene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1yc4k")

[node name="host_Button" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -38.5
offset_right = 70.0
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "HOST"

[node name="game_settings_vbox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.8125
anchor_top = 0.289063
anchor_right = 0.892578
anchor_bottom = 0.398438
metadata/_edit_use_anchors_ = true

[node name="number_of_players_info_Label" type="Label" parent="game_settings_vbox"]
layout_mode = 2
text = "Number
 of players"
horizontal_alignment = 1

[node name="players_count_SpinBox" type="SpinBox" parent="game_settings_vbox"]
unique_name_in_owner = true
layout_mode = 2
min_value = 2.0
max_value = 6.0
value = 2.0
metadata/_edit_use_anchors_ = true

[node name="amout_of_teams_Label" type="Label" parent="game_settings_vbox"]
layout_mode = 2
text = "Amount of 
teams"
horizontal_alignment = 1

[node name="amount_of_teams_SpinBox" type="SpinBox" parent="game_settings_vbox"]
unique_name_in_owner = true
layout_mode = 2
min_value = 2.0
max_value = 6.0
value = 2.0

[node name="game_start_button" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.38916
anchor_top = 0.580078
anchor_right = 0.61084
anchor_bottom = 0.693359
grow_horizontal = 2
grow_vertical = 2
text = "START"
metadata/_edit_use_anchors_ = true

[node name="players_container" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -460.0
offset_right = 460.0
offset_bottom = 128.0
grow_horizontal = 2
alignment = 1

[node name="player_visual_container" type="VBoxContainer" parent="players_container"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="players_container/player_visual_container"]
layout_mode = 2
texture = ExtResource("2_uxx1x")

[node name="Label" type="Label" parent="players_container/player_visual_container"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "It is you"
horizontal_alignment = 1
vertical_alignment = 1

[node name="player_visual_container2" type="VBoxContainer" parent="players_container"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="players_container/player_visual_container2"]
layout_mode = 2
texture = ExtResource("2_607de")

[node name="Label" type="Label" parent="players_container/player_visual_container2"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "None"
vertical_alignment = 1
clip_text = true

[node name="player_visual_container3" type="VBoxContainer" parent="players_container"]
visible = false
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="players_container/player_visual_container3"]
layout_mode = 2
texture = ExtResource("2_607de")

[node name="Label" type="Label" parent="players_container/player_visual_container3"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "It is you"
horizontal_alignment = 1
vertical_alignment = 1

[node name="player_visual_container4" type="VBoxContainer" parent="players_container"]
visible = false
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="players_container/player_visual_container4"]
layout_mode = 2
texture = ExtResource("2_607de")

[node name="Label" type="Label" parent="players_container/player_visual_container4"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "It is you"
horizontal_alignment = 1
vertical_alignment = 1

[node name="player_visual_container5" type="VBoxContainer" parent="players_container"]
visible = false
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="players_container/player_visual_container5"]
layout_mode = 2
texture = ExtResource("2_607de")

[node name="Label" type="Label" parent="players_container/player_visual_container5"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "It is you"
horizontal_alignment = 1
vertical_alignment = 1

[node name="player_visual_container6" type="VBoxContainer" parent="players_container"]
visible = false
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="players_container/player_visual_container6"]
layout_mode = 2
texture = ExtResource("2_607de")

[node name="Label" type="Label" parent="players_container/player_visual_container6"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "It is you"
horizontal_alignment = 1
vertical_alignment = 1

[node name="nickname_lineEdit" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
anchor_left = 0.0527344
anchor_top = 0.792
anchor_right = 0.053
anchor_bottom = 0.921875
offset_top = -0.256042
offset_right = 307.728
theme_override_font_sizes/font_size = 30
text = "Host"
placeholder_text = "YOU NICKNAME"
max_length = 20
metadata/_edit_use_anchors_ = true

[connection signal="button_up" from="host_Button" to="." method="_on_create_server_button_button_up"]
[connection signal="value_changed" from="game_settings_vbox/players_count_SpinBox" to="." method="_on_spin_box_value_changed"]
[connection signal="value_changed" from="game_settings_vbox/amount_of_teams_SpinBox" to="." method="_on_amount_of_teams_spin_box_value_changed"]
[connection signal="button_up" from="game_start_button" to="." method="_on_game_start_button_button_up"]
